--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -1,15 +1,14 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./fonts/icomoon.eot?6mniwy');
-  src:  url('./fonts/icomoon.eot?6mniwy#iefix') format('embedded-opentype'),
-    url('./fonts/icomoon.ttf?6mniwy') format('truetype'),
-    url('./fonts/icomoon.woff?6mniwy') format('woff'),
-    url('./fonts/icomoon.svg?6mniwy#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?6mniwy');
+  src:  url('fonts/icomoon.eot?6mniwy#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?6mniwy') format('truetype'),
+    url('fonts/icomoon.woff?6mniwy') format('woff'),
+    url('fonts/icomoon.svg?6mniwy#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
-
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
