--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -1,14 +1,15 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?6mniwy');
-  src:  url('fonts/icomoon.eot?6mniwy#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?6mniwy') format('truetype'),
-    url('fonts/icomoon.woff?6mniwy') format('woff'),
-    url('fonts/icomoon.svg?6mniwy#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?mk6kk1');
+  src:  url('fonts/icomoon.eot?mk6kk1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?mk6kk1') format('truetype'),
+    url('fonts/icomoon.woff?mk6kk1') format('woff'),
+    url('fonts/icomoon.svg?mk6kk1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -25,6 +26,51 @@
 }
 
 .icon-loading:before {
+  content: "\e915";
+}
+.icon-check:before {
+  content: "\e904";
+}
+.icon-check-circle:before {
+  content: "\e908";
+}
+.icon-close-circle:before {
+  content: "\e909";
+}
+.icon-down:before {
+  content: "\e90a";
+}
+.icon-github-fill:before {
+  content: "\e90b";
+}
+.icon-info-circle:before {
+  content: "\e90c";
+}
+.icon-left:before {
+  content: "\e90d";
+}
+.icon-location:before {
+  content: "\e90e";
+}
+.icon-question-circle:before {
+  content: "\e90f";
+}
+.icon-right:before {
+  content: "\e910";
+}
+.icon-search:before {
+  content: "\e911";
+}
+.icon-setting:before {
+  content: "\e912";
+}
+.icon-up:before {
+  content: "\e913";
+}
+.icon-user:before {
+  content: "\e914";
+}
+.icon-loading-spinner:before {
   content: "\e900";
 }
 .icon-close:before {
@@ -36,9 +82,6 @@
 .icon-camera:before {
   content: "\e903";
 }
-.icon-arrow-right:before {
-  content: "\e904";
-}
 .icon-bottom:before {
   content: "\e905";
 }
@@ -47,7 +90,4 @@
 }
 .icon-ashbin:before {
   content: "\e907";
-}
-.icon-arrow-down:before {
-  content: "\e908";
 }
