--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?mk6kk1');
-  src:  url('fonts/icomoon.eot?mk6kk1#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?mk6kk1') format('truetype'),
-    url('fonts/icomoon.woff?mk6kk1') format('woff'),
-    url('fonts/icomoon.svg?mk6kk1#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ip3tn4');
+  src:  url('fonts/icomoon.eot?ip3tn4#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ip3tn4') format('truetype'),
+    url('fonts/icomoon.woff?ip3tn4') format('woff'),
+    url('fonts/icomoon.svg?ip3tn4#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -38,7 +38,7 @@
   content: "\e909";
 }
 .icon-down:before {
-  content: "\e90a";
+  content: "\e917";
 }
 .icon-github-fill:before {
   content: "\e90b";
@@ -82,6 +82,9 @@
 .icon-camera:before {
   content: "\e903";
 }
+.icon-arrow-right:before {
+  content: "\e916";
+}
 .icon-bottom:before {
   content: "\e905";
 }
@@ -90,4 +93,7 @@
 }
 .icon-ashbin:before {
   content: "\e907";
+}
+.icon-arrow-down:before {
+  content: "\e90a";
 }
